--- a/debian/po/de.po
+++ b/debian/po/de.po
@@ -21,7 +21,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-19 09:28+0200\n"
-"PO-Revision-Date: 2005-08-03 22:00+0200\n"
+"PO-Revision-Date: 2006-07-19 21:45+0200\n"
 "Last-Translator: Jens Seidel <jensseidel@users.sf.net>\n"
 "Language-Team: Debian German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -33,7 +33,7 @@ msgstr ""
 #. Description
 #: ../main-menu.templates:3
 msgid "Debian installer main menu"
-msgstr "Debian-Installer Hauptmenü"
+msgstr "Debian-Installer-Hauptmenü"
 
 #. Type: select
 #. Description
