--- a/debian/po/ne.po
+++ b/debian/po/ne.po
@@ -4,28 +4,21 @@
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
 # translation of template.po to Nepali
-#
-# Debian Installer master translation file template
-# Don't forget to properly fill-in the header of PO files#
-# Debian Installer translators, please read the D-I i18n documentation
-# in doc/i18n/i18n.txt#
-# Shiva  Pokharel <pokharelshiva@hotmail.com>, 2006.
-# Shiva Pokharel <pokharelshiva@hotmail.com>, 2006.
 # Shyam Krishna Bal <shyamkrishna_bal@yahoo.com>, 2006.
-#
+# Shiva Pokharel <pokharelshiva@hotmail.com>, 2006.
 msgid ""
 msgstr ""
 "Project-Id-Version: template\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-19 09:28+0200\n"
-"PO-Revision-Date: 2006-05-10 12:51+0545\n"
+"PO-Revision-Date: 2006-06-06 14:34+0545\n"
 "Last-Translator: Shiva Pokharel <pokharelshiva@hotmail.com>\n"
 "Language-Team: Nepali <info@mpp.org.np>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.10.2\n"
 "Plural-Forms: nplurals=2;plural=(n!=1)\n"
+"X-Generator: KBabel 1.10.2\n"
 
 #. Type: text
 #. Description
@@ -59,7 +52,7 @@ msgid ""
 "the menu, or skip it and choose something else. The failing step is: ${ITEM}"
 msgstr ""
 "स्थापना चरण असफल भयो । तपाईँले असफल वस्तुहरुलाई मुख्य मेनुबाट फेरि चलाउनका लागि कोशिस "
-"गर्न सक्नुहुन्छ वा यसलाई त्याग्नुहोस् र अन्य केहि रोज्नुहोस् । असफलता चरण यो हो:"
+"गर्न सक्नुहुन्छ वा यसलाई त्याग्नुहोस् र अन्य केहि रोज्नुहोस् । असफलता चरण यो हो: ${ITEM}"
 
 #. Type: select
 #. Description
