[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r40197

--- a/debian/po/de.po
+++ b/debian/po/de.po
@@ -14,14 +14,14 @@
 # Jan Luebbe <jluebbe@lasnet.de>, 2003.
 # Thorsten Sauter <tsauter@gmx.net>, 2003.
 #
-# This file is maintained by Dennis Stampfer <seppy@debian.org>
+# This file is maintained by Jens Seidel <jensseidel@users.sf.net>
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-19 09:28+0200\n"
-"PO-Revision-Date: 2006-07-19 21:45+0200\n"
+"PO-Revision-Date: 2006-08-23 23:49+0200\n"
 "Last-Translator: Jens Seidel <jensseidel@users.sf.net>\n"
 "Language-Team: Debian German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -61,7 +61,7 @@ msgid ""
 "the menu, or skip it and choose something else. The failing step is: ${ITEM}"
 msgstr ""
 "Ein Teil der Installation ist fehlgeschlagen. Sie können versuchen, diesen "
-"Schritt aus dem Menü aufzurufen, oder zu überspringen und einen anderen zu "
+"Schritt aus dem Menü aufzurufen oder ihn überspringen und einen anderen "
 "wählen. Fehlgeschlagen: ${ITEM}"
 
 #. Type: select
