--- a/debian/po/id.po
+++ b/debian/po/id.po
@@ -20,13 +20,15 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-19 09:28+0200\n"
-"PO-Revision-Date: 2004-10-02 16:27+0700\n"
-"Last-Translator: Parlin Imanuel Toh <pt@samip-online.com>\n"
+"PO-Revision-Date: 2006-08-28 13:00+0700\n"
+"Last-Translator: Arief S Fitrianto <arief@gurame.fisika.ui.ac.id>\n"
 "Language-Team: Debian Indonesia Team <debian-l10n-id@gurame.fisika.ui.ac."
 "id>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Poedit-Language: Indonesian\n"
+"X-Poedit-Country: INDONESIA\n"
 
 #. Type: text
 #. Description
@@ -44,13 +46,13 @@ msgstr "Pilih langkah berikutnya dalam proses instalasi:"
 #. Description
 #: ../main-menu.templates:9
 msgid "This is the main menu for the Debian installer."
-msgstr "Ini merupakan Menu Utama Instalasi Debian"
+msgstr "Ini merupakan Menu Utama Instalasi Debian."
 
 #. Type: error
 #. Description
 #: ../main-menu.templates:14
 msgid "Installation step failed"
-msgstr "Langkah instalasi gagal"
+msgstr "Langkah instalasi telah gagal"
 
 #. Type: error
 #. Description
@@ -59,9 +61,9 @@ msgid ""
 "An installation step failed. You can try to run the failing item again from "
 "the menu, or skip it and choose something else. The failing step is: ${ITEM}"
 msgstr ""
-"Sebuah langkah instalasi telah gagal. Anda dapat mencoba mengulangi lagi "
-"langkah yang gagal dari menu, atau mengabaikannya dan memilih yang lain. "
-"Langkah yang gagal adalah: ${ITEM}"
+"Sebuah langkah instalasi telah gagal. Anda dapat mengulangi lagi langkah "
+"yang gagal dari menu, atau mengabaikannya dan memilih yang lain. Langkah "
+"yang gagal adalah: ${ITEM}"
 
 #. Type: select
 #. Description
