--- a/debian/po/wo.po
+++ b/debian/po/wo.po
@@ -13,9 +13,9 @@ msgstr ""
 "Project-Id-Version: wo\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-19 09:28+0200\n"
-"PO-Revision-Date: 2005-08-27 12:51+0000\n"
+"PO-Revision-Date: 2006-09-05 19:50+0000\n"
 "Last-Translator: Mouhamadou Mamoune Mbacke <mouhamadoumamoune@gmail.com>\n"
-"Language-Team: Wolof\n"
+"Language-Team: Wolof <debian-boot@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -25,7 +25,7 @@ msgstr ""
 #. Description
 #: ../main-menu.templates:3
 msgid "Debian installer main menu"
-msgstr "Menu bu mag bu porogaraam u istalaasioŋ bu Debian bi"
+msgstr "Menu bu mag bu prograamu istalaasioŋ bu Debian"
 
 #. Type: select
 #. Description
