--- a/debian/po/he.po
+++ b/debian/po/he.po
@@ -3,23 +3,26 @@
 #
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
+# translation of he.po to Hebrew
 # Hebrew messages for debian-installer.
 # Copyright (C) 2003 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
+#
+#
 # <>, 2004.
-# 
-# 
+# Lior Kaplan <kaplan@debian.org>, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: debian-installer\n"
+"Project-Id-Version: he\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-19 09:28+0200\n"
-"PO-Revision-Date: 2005-07-12 19:37+0300\n"
-"Last-Translator: Lior Kaplan <webmaster@guides.co.il>\n"
-"Language-Team: Debian l10n Hebrew <webmaster@guides.co.il>\n"
+"PO-Revision-Date: 2006-09-08 19:51+0200\n"
+"Last-Translator: Lior Kaplan <kaplan@debian.org>\n"
+"Language-Team: Hebrew <debian-hebrew-common@lists.alioth.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.11.2\n"
 
 #. Type: text
 #. Description
@@ -31,19 +34,19 @@ msgstr "תפריט ראשי של התקנת דביאן"
 #. Description
 #: ../main-menu.templates:9
 msgid "Choose the next step in the install process:"
-msgstr "בחירת השלב הבא בתהליך ההתקנה:"
+msgstr "בחר את השלב הבא בתהליך ההתקנה:"
 
 #. Type: select
 #. Description
 #: ../main-menu.templates:9
 msgid "This is the main menu for the Debian installer."
-msgstr "זה המסך הראשי של מתקין דביאן"
+msgstr "זהו המסך הראשי של תוכנית ההתקנה של דביאן."
 
 #. Type: error
 #. Description
 #: ../main-menu.templates:14
 msgid "Installation step failed"
-msgstr "כשלון בשלב ההתקנה"
+msgstr "כשלון בשלב התקנה"
 
 #. Type: error
 #. Description
