[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r40610

--- a/debian/po/sk.po
+++ b/debian/po/sk.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-19 09:28+0200\n"
-"PO-Revision-Date: 2005-06-26 10:56+0200\n"
+"PO-Revision-Date: 2006-09-12 07:30+0200\n"
 "Last-Translator: Peter Mann <Peter.Mann@tuke.sk>\n"
 "Language-Team:  Slovak <sk-i18n@lists.linux.sk>\n"
 "MIME-Version: 1.0\n"
@@ -51,7 +51,7 @@ msgid ""
 "the menu, or skip it and choose something else. The failing step is: ${ITEM}"
 msgstr ""
 "Inštalačný krok zlyhal. Môžete sa pokúsiť znovu o spustenie tohto chybného "
-"kroku z menu, vynechať ho alebo vybrať niečo iné. Chybný krok je: ${ITEM}"
+"kroku z menu, vynechať ho alebo zvoliť niečo iné. Chybný krok je: ${ITEM}"
 
 #. Type: select
 #. Description
@@ -66,5 +66,5 @@ msgid ""
 "This installation step depends on one or more other steps that have not yet "
 "been performed."
 msgstr ""
-"Tento inštalačný krok závisí na jednom alebo viacerých krokoch, ktoré ešte "
-"neboli vykonané."
+"Tento inštalačný krok závisí na jednom alebo viacerých krokoch, ktoré sa "
+"ešte nevykonali."
