[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r40655

--- a/debian/po/ko.po
+++ b/debian/po/ko.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-19 09:28+0200\n"
-"PO-Revision-Date: 2004-09-30 22:56+0900\n"
+"PO-Revision-Date: 2006-09-14 12:11-0400\n"
 "Last-Translator:  Sunjae park <darehanl@gmail.com>\n"
 "Language-Team:  Korean <debian-l10n-korean@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -51,8 +51,8 @@ msgid ""
 "An installation step failed. You can try to run the failing item again from "
 "the menu, or skip it and choose something else. The failing step is: ${ITEM}"
 msgstr ""
-"설치 단계가 실패했습니다. 메뉴에서 실패한 항목을 다시 실행할 수도 있고, 건너 "
-"뛰고 다른 항목을 선택할 수도 있습니다. 실패한 단계는: ${ITEM}"
+"설치 단계가 실패했습니다. 메뉴에서 실패한 항목을 다시 실행할 수도 있고, 생략"
+"하고 다른 항목을 선택할 수도 있습니다. 실패한 단계는: ${ITEM}"
 
 #. Type: select
 #. Description
