--- a/debian/po/vi.po
+++ b/debian/po/vi.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: debian-installer Level 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-19 09:28+0200\n"
-"PO-Revision-Date: 2006-09-05 16:44+0930\n"
+"PO-Revision-Date: 2006-09-21 18:04+0930\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
 "Language-Team: Vietnamese <vi-VN@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
@@ -29,13 +29,13 @@ msgstr ""
 #. Description
 #: ../main-menu.templates:3
 msgid "Debian installer main menu"
-msgstr "Trình đơn cài đặt chính của Debian"
+msgstr "Trình đơn chính của bộ cài đặt Debian"
 
 #. Type: select
 #. Description
 #: ../main-menu.templates:9
 msgid "Choose the next step in the install process:"
-msgstr "Hãy chọn bước tiếp theo trong quá trình cài đặt:"
+msgstr "Hãy chọn bước tiếp theo trong tiến trình cài đặt:"
 
 #. Type: select
 #. Description
@@ -57,8 +57,8 @@ msgid ""
 "the menu, or skip it and choose something else. The failing step is: ${ITEM}"
 msgstr ""
 "Một bước cài đặt không thành công. Bạn có thể thử chạy lại mục bị lỗi từ "
-"trình đơn, hoặc bỏ qua nó và chọn một tùy chọn khác. Bước cài đặt bị lỗi "
-"là : ${ITEM}"
+"trình đơn, hoặc bỏ qua nó và chọn một điều khác. Bước cài đặt bị lỗi là : "
+"${ITEM}"
 
 #. Type: select
 #. Description
