--- a/debian/po/eo.po
+++ b/debian/po/eo.po
@@ -5,19 +5,17 @@
 # 
 # translation of eo.po to Esperanto 
 # Esperanto messages for debian-installer.
-# Debian Installer master translation file template
-# Don't forget to properly fill-in the header of PO files
-# Debian Installer translators, please read the D-I i18n documentation
-# in doc/i18n/i18n.txt
+# Copyright (C) 2005,2006 Software in the Public Interest, Inc.
+# This file is distributed under the same license as debian-installer.
+#
 # Samuel Gimeno <sgimeno@gmail.com>, 2005.
 # Serge Leblanc <serge.leblanc@wanadoo.fr>, 2005-2006.
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: eo\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-19 09:28+0200\n"
-"PO-Revision-Date: 2006-03-20 13:14+0100\n"
+"PO-Revision-Date: 2006-09-25 11:54+0200\n"
 "Last-Translator: Serge Leblanc <serge.leblanc@wanadoo.fr>\n"
 "Language-Team: Esperanto <debian-l10n-esperanto@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -34,7 +32,7 @@ msgstr "Ĉefmenuo de la Debiana instalilo"
 #. Description
 #: ../main-menu.templates:9
 msgid "Choose the next step in the install process:"
-msgstr "Elektu la sekvantan paŝon en la instalada procezo:"
+msgstr "Elektu la sekvantan paŝon de la instalprocezo:"
 
 #. Type: select
 #. Description
@@ -46,7 +44,7 @@ msgstr "Tio estas la ĉefmenuo de la Debiana instalilo."
 #. Description
 #: ../main-menu.templates:14
 msgid "Installation step failed"
-msgstr "Malsukcesis instalada paŝo"
+msgstr "Malsukcesis instaletapo"
 
 #. Type: error
 #. Description
@@ -55,14 +53,14 @@ msgid ""
 "An installation step failed. You can try to run the failing item again from "
 "the menu, or skip it and choose something else. The failing step is: ${ITEM}"
 msgstr ""
-"Instalada paŝo malsukcesis. Vi povas denove provi ĉe la menuo, aŭ preterpasi "
-"elektante ion alian. La malsukcesa paŝo estas: ${ITEM}"
+"Instaletapo malsukcesis. Vi povas denove provi ĉe la menuo, aŭ preterlasi "
+"elektante ion alian. La malsukcesinta etapo estas: ${ITEM}"
 
 #. Type: select
 #. Description
 #: ../main-menu.templates:23
 msgid "Choose an installation step:"
-msgstr "Elektu instaladan paŝon:"
+msgstr "Elektu instaletapon:"
 
 #. Type: select
 #. Description
@@ -71,5 +69,5 @@ msgid ""
 "This installation step depends on one or more other steps that have not yet "
 "been performed."
 msgstr ""
-"Tiu ĉi instalada paŝo dependas de unu aŭ pli aliaj paŝoj, kiuj ankoraŭ ne "
-"okazis."
+"Tiu ĉi instaletapo dependas de unu aŭ pli aliaj etapoj, kiuj ankoraŭ ne "
+"estas plenumitaj."
