--- a/debian/po/hr.po
+++ b/debian/po/hr.po
@@ -13,8 +13,8 @@ msgstr ""
 "Project-Id-Version: Debian-installer 1st-stage master file HR\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-19 09:28+0200\n"
-"PO-Revision-Date: 2005-03-05 21:51+0100\n"
-"Last-Translator: Krunoslav Gernhard <kruno@linux.hr>\n"
+"PO-Revision-Date: 2006-09-25 23:55+0200\n"
+"Last-Translator: Josip Rodin <joy+ditrans@linux.hr>\n"
 "Language-Team: Croatian <lokalizacija@linux.hr>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -24,25 +24,25 @@ msgstr ""
 #. Description
 #: ../main-menu.templates:3
 msgid "Debian installer main menu"
-msgstr "Glavni izabirnik Debian-instalacije"
+msgstr "Glavni izbornik Debian instalacije"
 
 #. Type: select
 #. Description
 #: ../main-menu.templates:9
 msgid "Choose the next step in the install process:"
-msgstr "Izaberite slijedeći korak instalacije:"
+msgstr "Izaberite sljedeći korak instalacije:"
 
 #. Type: select
 #. Description
 #: ../main-menu.templates:9
 msgid "This is the main menu for the Debian installer."
-msgstr "Ovo je glavni izabirnik Debian-instalacije."
+msgstr "Ovo je glavni izbornik Debian instalacije."
 
 #. Type: error
 #. Description
 #: ../main-menu.templates:14
 msgid "Installation step failed"
-msgstr "Korak instalacije neuspio."
+msgstr "Korak instalacije nije uspio"
 
 #. Type: error
 #. Description
