--- a/debian/po/et.po
+++ b/debian/po/et.po
@@ -8,30 +8,30 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-19 09:28+0200\n"
-"PO-Revision-Date: 2006-06-22 11:21+0300\n"
-"Last-Translator: Siim Põder <windo@windowlicker.dyn.ee>\n"
+"PO-Revision-Date: 2006-10-03 10:20+0300\n"
+"Last-Translator: Siim PÃµder <windo@p6drad-teel.net>\n"
 "Language-Team: Eesti <linuxiabi@hot.ee>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=iso-8859-1\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #. Type: text
 #. Description
 #: ../main-menu.templates:3
 msgid "Debian installer main menu"
-msgstr "Debiani paigaldaja peamenüü"
+msgstr "Debiani paigaldaja peamenÃ¼Ã¼"
 
 #. Type: select
 #. Description
 #: ../main-menu.templates:9
 msgid "Choose the next step in the install process:"
-msgstr "Vali järgmine paigaldamise samm:"
+msgstr "Vali jÃ¤rgmine paigaldamise samm:"
 
 #. Type: select
 #. Description
 #: ../main-menu.templates:9
 msgid "This is the main menu for the Debian installer."
-msgstr "See on Debiani paigaldaja peamenüü."
+msgstr "See on Debiani paigaldaja peamenÃ¼Ã¼."
 
 #. Type: error
 #. Description
@@ -46,8 +46,8 @@ msgid ""
 "An installation step failed. You can try to run the failing item again from "
 "the menu, or skip it and choose something else. The failing step is: ${ITEM}"
 msgstr ""
-"Paigaldamise samm nurjus. Võid ebaõnnestunud sammu menüüst uuesti käivitada "
-"või ta vahele jätta ja valida midagi muud. Samm, mis ebaõnnestus: ${ITEM}"
+"Paigaldamise samm nurjus. VÃµid ebaÃµnnestunud sammu menÃ¼Ã¼st uuesti kÃ¤ivitada "
+"vÃµi ta vahele jÃ¤tta ja valida midagi muud. Samm, mis ebaÃµnnestus: ${ITEM}"
 
 #. Type: select
 #. Description
@@ -61,4 +61,4 @@ msgstr "Vali paigaldamise samm:"
 msgid ""
 "This installation step depends on one or more other steps that have not yet "
 "been performed."
-msgstr "See paigaldamise samm sõltub ühest või enamast veel läbimata sammust."
+msgstr "See paigaldamise samm sÃµltub Ã¼hest vÃµi enamast veel lÃ¤bimata sammust."
