--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+main-menu (1.14) UNRELEASED; urgency=low
+
+  * Make cdebconf honour currently set debconf/language.
+
+ -- Frans Pop <fjp@debian.org>  Thu,  5 Oct 2006 17:36:42 +0200
+
 main-menu (1.13) unstable; urgency=low
 
   * Comment out some debug items, switch another log item to info.
