--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 main-menu (1.14) UNRELEASED; urgency=low
 
-  * Make cdebconf honour currently set debconf/language.
+  * Make cdebconf honour currently set debconf/language (#381142).
 
  -- Frans Pop <fjp@debian.org>  Thu,  5 Oct 2006 17:36:42 +0200
 
