- Add Lintian override for standards-version - Release version 1.14
r41320

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,32 @@
-main-menu (1.14) UNRELEASED; urgency=low
+main-menu (1.14) unstable; urgency=low
 
   * Make cdebconf honour currently set debconf/language (#381142).
+  * Add Lintian override for standards-version.
 
- -- Frans Pop <fjp@debian.org>  Thu,  5 Oct 2006 17:36:42 +0200
+  [ Updated translations ]
+  * German (de.po) by Jens Seidel
+  * Greek (el.po) by quad-nrg.net
+  * Esperanto (eo.po) by Serge Leblanc
+  * Spanish (es.po) by Javier Fernández-Sanguino Peña
+  * Estonian (et.po) by Siim Põder
+  * Basque (eu.po) by Piarres Beobide
+  * Gujarati (gu.po) by Kartik Mistry
+  * Hebrew (he.po) by Lior Kaplan
+  * Hindi (hi.po) by Nishant Sharma
+  * Croatian (hr.po) by Josip Rodin
+  * Hungarian (hu.po) by SZERVÁC Attila
+  * Indonesian (id.po) by Arief S Fitrianto
+  * Korean (ko.po) by Sunjae park
+  * Kurdish (ku.po) by Erdal Ronahi
+  * Latvian (lv.po) by Aigars Mahinovs
+  * Marathi (mr.po) by Priti D. Patil
+  * Punjabi (Gurmukhi) (pa.po) by A S Alam
+  * Slovak (sk.po) by Peter Mann
+  * Swedish (sv.po) by Daniel Nylander
+  * Vietnamese (vi.po) by Clytie Siddall
+  * Wolof (wo.po) by Mouhamadou Mamoune Mbacke
+
+ -- Frans Pop <fjp@debian.org>  Fri,  6 Oct 2006 02:39:02 +0200
 
 main-menu (1.13) unstable; urgency=low
 
