[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r41348

--- a/debian/po/gu.po
+++ b/debian/po/gu.po
@@ -71,5 +71,5 @@ msgid ""
 "This installation step depends on one or more other steps that have not yet "
 "been performed."
 msgstr ""
-"આ સ્થાપન પગથિયું એક અથવા વધુ બીજાં પગથિયાં પર આધારિત છે જે હજી સુધી પૂરા કરવામાં આવેલ "
+"આ સ્થાપન પગથિયું એક અથવા વધુ બીજાં પગથિયાંઓ પર આધારિત છે જે હજી સુધી પૂરા કરવામાં આવેલ "
 "નથી."
