--- a/debian/po/dz.po
+++ b/debian/po/dz.po
@@ -14,32 +14,35 @@ msgstr ""
 "Project-Id-Version: dz\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-19 09:28+0200\n"
-"PO-Revision-Date: 2006-04-28 18:02+0530\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2006-10-06 10:45+0530\n"
+"Last-Translator: Jurmey Rabgay <jur_gay@yahoo.com>\n"
 "Language-Team: Dzongkha <pgeyleg@dit.gov.bt>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.10.2\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Poedit-Language: Dzongkha\n"
+"X-Poedit-Country: Bhutan\n"
+"X-Poedit-SourceCharset: utf-8\n"
 
 #. Type: text
 #. Description
 #: ../main-menu.templates:3
 msgid "Debian installer main menu"
-msgstr "ཌེ་བི་ཡཱན་གཞི་བཙུགས་པའི་དཀར་ཆ་ངོ་མ།"
+msgstr "ཌེ་བི་ཡཱན་གཞི་བཙུགས་པའི་དཀར་ཆག་ངོ་མ།"
 
 #. Type: select
 #. Description
 #: ../main-menu.templates:9
 msgid "Choose the next step in the install process:"
-msgstr "གཞི་བཙུགས་ལས་སྦྱོར་ནང་ལུ་རིམ་པ་ཤུལ་མམ་དེ་གདམ་ཁ་རྐྱབ:"
+msgstr "གཞི་བཙུགས་ལས་སྦྱོར་ནང་ལུ་རིམ་པ་ཤུལ་མམ་དེ་གདམ་ཁ་རྐྱབས:"
 
 #. Type: select
 #. Description
 #: ../main-menu.templates:9
 msgid "This is the main menu for the Debian installer."
-msgstr "ཌེ་བཱན་གཞི་བཙུགས་འབད་ནིའི་དོན་ལུ་འ་ནི་འདི་དཀར་ཆ་ངོ་མ་ཨིན།"
+msgstr "ཌེ་བཱན་གཞི་བཙུགས་པའི་དོན་ལུ་ འ་ནི་འདི་དཀར་ཆག་ངོ་མ་ཨིན།"
 
 #. Type: error
 #. Description
@@ -55,8 +58,8 @@ msgid ""
 "the menu, or skip it and choose something else. The failing step is: ${ITEM}"
 msgstr ""
 "གཞི་བཙུགས་ཀྱི་རིམ་པ་དེ་འཐུས་ཤོར་བྱུང་ནུག། ཁྱོད་ཀྱིས་དཀར་ཆག་ནང་ལས་འཐུས་ཤོར་བྱུང་ནིའི་རྣམ་གྲངས་དེ་ལོག་"
-"གཡོག་བཀོལ་ནི་ལུ་འབད་རྩོལ་བསྐྱོད་ཚུགས་ ཡང་ན་ དེ་གོམ་འགྱོ་ནི་དང་ག་ཅི་ཅིག་གདམ་ཁ་རྐྱབས། འཐུས་ཤོར་འབྱུང་"
-"ནིའི་རྣམ་གྲངས་འདི་ ${ITEM} ཨིན།"
+"གཡོག་བཀོལ་ནི་ལུ་འབད་རྩོལ་བསྐྱེད་ཚུགས་ ཡང་ན་ དེ་གོམ་འགྱོ་ནི་དང་ག་ཅི་ཅིག་གདམ་ཁ་རྐྱབས། འཐུས་ཤོར་འབྱུང་"
+"ནིའི་རིམ་པ་འདི་ ${ITEM} ཨིན།"
 
 #. Type: select
 #. Description
@@ -70,4 +73,5 @@ msgstr "གཞི་བཙུགས་ཀྱི་རིམ་པ་ཅིག་
 msgid ""
 "This installation step depends on one or more other steps that have not yet "
 "been performed."
-msgstr "གཞི་བཙུགས་ཀྱི་རིམ་པ་དེ་ད་ཚུན་ལཱ་མ་འབདཝ་ལས་གཅིག་དང་ཡང་ན་དེ་ལས་མངམ་ལུ་བརྟེན་དགོ།"
+msgstr ""
+"གཞི་བཙུགས་ཀྱི་རིམ་པ་དེ་ ད་ཚུན་ལཱ་མ་འབད་བར་ཡོད་མི་ རིམ་པ་གཅིག་དང་ཡང་ན་ དེ་ལས་མངམ་ལུ་བརྟེནམ་ཨིན།"
