--- a/debian/po/it.po
+++ b/debian/po/it.po
@@ -26,8 +26,8 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-19 09:28+0200\n"
-"PO-Revision-Date: 2004-04-15 22:10+0200\n"
-"Last-Translator: Giuseppe Sacco <eppesuig@debian.org>\n"
+"PO-Revision-Date: 2006-10-08 15:02+0200\n"
+"Last-Translator: Stefano Canepa <sc@linux.it>\n"
 "Language-Team:   Italian <debian-l10n-italian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -37,7 +37,7 @@ msgstr ""
 #. Description
 #: ../main-menu.templates:3
 msgid "Debian installer main menu"
-msgstr "Menu principale dell'installatore Debian"
+msgstr "Menu principale del programma di installazione Debian"
 
 #. Type: select
 #. Description
@@ -49,7 +49,7 @@ msgstr "Scegliere il prossimo passo della procedura d'installazione:"
 #. Description
 #: ../main-menu.templates:9
 msgid "This is the main menu for the Debian installer."
-msgstr "Questo è il menu principale dell'installatore Debian."
+msgstr "Questo è il menu principale del programma di installazione Debian."
 
 #. Type: error
 #. Description
