[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r41555

--- a/debian/po/ta.po
+++ b/debian/po/ta.po
@@ -3,62 +3,25 @@
 #
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
-# translation of ta.po to 
-# translation of ta_part1.po to
+# translation of ta.po to Tamil
+# Tamil messages for debian-installer.
+# Copyright (C) 2003 Software in the Public Interest, Inc.
+# This file is distributed under the same license as debian-installer.
 #
-#
-# Debian Installer master translation file template
-# Don't forget to properly fill-in the header of PO files
-#
-# Debian Installer translators, please read the D-I i18n documentation
-# in doc/i18n/i18n.txt
-# , 2005.
-# , 2006.
-# , 2006.
-# , 2006.
-# , 2006.
-# , 2006.
-# , 2006.
-# , 2006.
-# , 2006.
-# , 2006.
-# , 2006.
-# , 2006.
-# , 2006.
-# , 2006.
-# , 2006.
-# , 2006.
-# , 2006.
-# , 2006.
-# , 2006.
-# , 2006.
-# , 2006.
-# , 2006.
-# , 2006.
-# , 2006.
-# , 2006.
-# , 2006.
-# , 2006.
-# , 2006.
-# , 2006.
-# , 2006.
-# , 2006.
-# , 2006.
-# , 2006.
-#
-#
+# drtvasudevan <agnihot3@gmail.com>, 2006.
+# Damodharan Rajalingam <rdamodharan@gmail.com>, 2006.
 msgid ""
 msgstr ""
 "Project-Id-Version: ta\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-19 09:28+0200\n"
-"PO-Revision-Date: 2006-01-02 21:09+0530\n"
-"Last-Translator: Damodharan Rajalingam\n"
-"Language-Team:  <tamil-DI@yahoogroups.com>\n"
+"PO-Revision-Date: 2006-10-12 01:25+0530\n"
+"Last-Translator: Damodharan Rajalingam <rdamodharan@gmail.com>\n"
+"Language-Team: Tamil <tamil-DI@yahoogroups.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.9.1\n"
+"X-Generator: KBabel 1.11.4\n"
 
 #. Type: text
 #. Description
@@ -82,7 +45,7 @@ msgstr "இது டிபியன் நிறுவிக்கான மு
 #. Description
 #: ../main-menu.templates:14
 msgid "Installation step failed"
-msgstr "நிறுவல்படி தோல்வியடைந்த்தது"
+msgstr "நிறுவல் படி தோல்வியடைந்தது"
 
 #. Type: error
 #. Description
@@ -91,14 +54,15 @@ msgid ""
 "An installation step failed. You can try to run the failing item again from "
 "the menu, or skip it and choose something else. The failing step is: ${ITEM}"
 msgstr ""
-"ஒரு நிறுவல் படி தோல்வியடைந்த்து. மீண்டும் அதை பட்டியிலிருந்து தேர்வு செய்யலாம் அல்லது அதை "
-"விடுத்து வேறொன்றை தேர்வு செய்யவும். தோல்வியுற்ற படி: ${ITEM}"
+"ஒரு நிறுவல் படி தோல்வியடைந்தது. மீண்டும் அதை பட்டியிலிருந்து தேர்வு செய்து "
+"முயற்சிசெய்யலாம். அல்லது அதை விடுத்து வேறொன்றை தேர்வு செய்யலாம். தோல்வியுற்ற படி: "
+"${ITEM}"
 
 #. Type: select
 #. Description
 #: ../main-menu.templates:23
 msgid "Choose an installation step:"
-msgstr "நிறுவல் படியை தேர்ந்தெடு:"
+msgstr "ஒரு நிறுவல் படியை தேர்ந்தெடு:"
 
 #. Type: select
 #. Description
@@ -106,4 +70,6 @@ msgstr "நிறுவல் படியை தேர்ந்தெடு:"
 msgid ""
 "This installation step depends on one or more other steps that have not yet "
 "been performed."
-msgstr "இந்த நிறுவல் படி செயல்படுதப்படாத ஒன்று அல்லது மேற்பட்ட மற்ற படிகளை சார்ந்துள்ளது."
+msgstr ""
+"இந்த நிறுவல் படி, இன்னமும் செயல்படுத்தப் படாத ஒன்று அல்லது மேற்பட்ட மற்ற படிகளை, "
+"சார்ந்துள்ளது."
