--- a/debian/po/ro.po
+++ b/debian/po/ro.po
@@ -3,7 +3,7 @@
 #
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
-# translation of ro.po to Romanian
+# translation of ro.po to Română
 # Romanian translation
 #
 #    Translators, if you are not familiar with the PO format, gettext
@@ -18,19 +18,19 @@
 #
 #    Developers do not need to manually edit POT or PO files.
 #
-# Eddy Petrişor <eddy.petrisor@gmail.com>, 2004, 2005, 2006.
+# Eddy Petrișor <eddy.petrisor@gmail.com>, 2004, 2005, 2006.
 msgid ""
 msgstr ""
 "Project-Id-Version: ro\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-19 09:28+0200\n"
-"PO-Revision-Date: 2005-11-20 18:34+0200\n"
-"Last-Translator: Eddy Petrişor <eddy.petrisor@gmail.com>\n"
+"PO-Revision-Date: 2006-10-14 00:17+0300\n"
+"Last-Translator: Eddy Petrișor <eddy.petrisor@gmail.com>\n"
 "Language-Team: Romanian <debian-l10n-romanian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.1\n"
+"X-Generator: KBabel 1.11.4\n"
 "Plural-Forms: nplurals=3;plural=(n==1?0:(((n%100>19)||((n%100==0)&&(n!=0)))?"
 "2:1))\n"
 
@@ -38,7 +38,7 @@ msgstr ""
 #. Description
 #: ../main-menu.templates:3
 msgid "Debian installer main menu"
-msgstr "Meniul principal al programului de instalare Debian"
+msgstr "Meniul principal al programului de instalare"
 
 #. Type: select
 #. Description
