[l10n] [SILENT_COMMIT] Synchronising with translation files from packages/po
r41805

--- a/debian/po/vi.po
+++ b/debian/po/vi.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: debian-installer Level 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-19 09:28+0200\n"
-"PO-Revision-Date: 2006-09-21 18:04+0930\n"
+"PO-Revision-Date: 2006-10-16 15:34+0930\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
 "Language-Team: Vietnamese <vi-VN@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
@@ -35,7 +35,7 @@ msgstr "Trình đơn chính của bộ cài đặt Debian"
 #. Description
 #: ../main-menu.templates:9
 msgid "Choose the next step in the install process:"
-msgstr "Hãy chọn bước tiếp theo trong tiến trình cài đặt:"
+msgstr "Hãy chọn bước kế tiếp trong tiến trình cài đặt:"
 
 #. Type: select
 #. Description
@@ -73,5 +73,4 @@ msgid ""
 "This installation step depends on one or more other steps that have not yet "
 "been performed."
 msgstr ""
-"Bước cài đặt này phụ thuộc vào một hoặc nhiều bước cài đặt khác chưa được "
-"thực hiện."
+"Bước cài đặt này phụ thuộc vào một hoặc nhiều bước khác chưa được thực hiện."
