--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+main-menu (1.15) unstable; urgency=low
+
+  [ Updated translations ]
+  * Belarusian (be.po) by Andrei Darashenka
+  * Dzongkha (dz.po) by Jurmey Rabgay
+  * Italian (it.po) by Stefano Canepa
+  * Kurdish (ku.po) by Erdal Ronahi
+  * Romanian (ro.po) by Eddy Petrișor
+  * Swedish (sv.po) by Daniel Nylander
+  * Tamil (ta.po) by Damodharan Rajalingam
+  * Vietnamese (vi.po) by Clytie Siddall
+
+ -- Frans Pop <fjp@debian.org>  Tue, 24 Oct 2006 15:12:26 +0200
+
 main-menu (1.14) unstable; urgency=low
 
   * Make cdebconf honour currently set debconf/language (#381142).
