--- a/debian/po/ml.po
+++ b/debian/po/ml.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: ml\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-19 09:28+0200\n"
-"PO-Revision-Date: 2006-10-24 12:31+0530\n"
+"PO-Revision-Date: 2006-10-26 12:40+0530\n"
 "Last-Translator: Praveen A <pravi.a@gmail.com>\n"
 "Language-Team: malayalam <smc-discuss@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
@@ -28,25 +28,25 @@ msgstr ""
 #. Description
 #: ../main-menu.templates:3
 msgid "Debian installer main menu"
-msgstr "ഡെബിയന്‍ ഇന്സ്റ്റാളറിന്റെ പ്രധാന മെനു"
+msgstr "ഡെബിയന്‍ ഇന്‍സ്റ്റാളറിന്റെ പ്രധാന മെനു"
 
 #. Type: select
 #. Description
 #: ../main-menu.templates:9
 msgid "Choose the next step in the install process:"
-msgstr "ഇന്സ്റ്റാള്‍ പ്രൊസസ്സിലെ അടുത്ത പടി തിരഞ്ഞെടുക്കൂ"
+msgstr "ഇന്‍സ്റ്റാള്‍ പ്രക്രിയയിലെ അടുത്ത നടപടി തിരഞ്ഞെടുക്കൂ:"
 
 #. Type: select
 #. Description
 #: ../main-menu.templates:9
 msgid "This is the main menu for the Debian installer."
-msgstr "ഡെബിയന്‍ ഇന്സ്റ്റാളറിന്റെ പ്രധാന മെനുവാണിത്"
+msgstr "ഡെബിയന്‍ ഇന്‍സ്റ്റാളറിന്റെ പ്രധാന മെനുവാണിത്."
 
 #. Type: error
 #. Description
 #: ../main-menu.templates:14
 msgid "Installation step failed"
-msgstr "ഇന്സ്റ്റളേഷന്‍ പടി പരാജയപ്പെട്ടു"
+msgstr "ഇന്സ്റ്റളേഷന്‍ നടപടി പരാജയപ്പെട്ടു"
 
 #. Type: error
 #. Description
@@ -55,15 +55,15 @@ msgid ""
 "An installation step failed. You can try to run the failing item again from "
 "the menu, or skip it and choose something else. The failing step is: ${ITEM}"
 msgstr ""
-"ഒരു ഇന്സ്റ്റളാഷന്‍ പടി പരാജയപ്പെട്ടു. പരാജയപ്പെട്ട പടി വീണ്ടും ഓടിക്കാന്‍ മെനുവില്‍ "
-"നിന്നുംശ്രമിക്കാം, അല്ലെങ്കില്‍ ഇതൊഴിവാക്കി മറ്റെന്തെങ്കിലും തിരഞ്ഞെടുക്കാം. ${ITEM} മാണ് "
+"ഒരു ഇന്‍സ്റ്റാളേഷന്‍ നടപടി പരാജയപ്പെട്ടു. പരാജയപ്പെട്ട നടപടി വീണ്ടും ഓടിക്കാന്‍ മെനുവില്‍ "
+"നിന്നുംശ്രമിക്കാം, അല്ലെങ്കില്‍ ഇതൊഴിവാക്കി മറ്റെന്തെങ്കിലും തിരഞ്ഞെടുക്കാം. ${ITEM} ആണ് "
 "പരാജയപ്പെട്ടത്"
 
 #. Type: select
 #. Description
 #: ../main-menu.templates:23
 msgid "Choose an installation step:"
-msgstr "ഒരു ഇന്സ്റ്റളേഷന്‍ പടി തിരഞ്ഞെടുക്കൂ:"
+msgstr "ഒരു ഇന്സ്റ്റളേഷന്‍ നടപടി തിരഞ്ഞെടുക്കൂ:"
 
 #. Type: select
 #. Description
@@ -71,4 +71,4 @@ msgstr "ഒരു ഇന്സ്റ്റളേഷന്‍ പടി തിര
 msgid ""
 "This installation step depends on one or more other steps that have not yet "
 "been performed."
-msgstr "ഈ ഇന്സ്റ്റളേഷന്‍ പടി ഇതു വരെ ചെയ്യാത്ത ഒന്നോ അതിലധികമോ പടികളെ ഡിപെന്റ് ചെയ്യുന്നു."
+msgstr "ഈ ഇന്സ്റ്റളേഷന്‍ നടപടി ഇതു വരെ ചെയ്യാത്ത ഒന്നോ അതിലധികമോ നടപടികളെ ആശ്രയിക്കുന്നു."
