--- a/debian/po/bs.po
+++ b/debian/po/bs.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: bs\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-19 09:28+0200\n"
-"PO-Revision-Date: 2006-04-11 11:42+0100\n"
+"PO-Revision-Date: 2006-11-06 18:31+0100\n"
 "Last-Translator: Safir Secerovic <sapphire@linux.org.ba>\n"
 "Language-Team: Bosnian <lokal@linux.org.ba>\n"
 "MIME-Version: 1.0\n"
@@ -22,7 +22,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.9.1\n"
 "Plural-Forms: 3\n"
-"X-Poedit-Language: Bosnian\n"
 "X-Poedit-Country: BOSNIA AND HERZEGOVINA\n"
 "X-Poedit-SourceCharset: utf-8\n"
 
@@ -36,7 +35,7 @@ msgstr "Glavni meni Debian instalatera"
 #. Description
 #: ../main-menu.templates:9
 msgid "Choose the next step in the install process:"
-msgstr "Izaberite slijedeći korak instalacijskog procesa:"
+msgstr "Izaberite slijedeći korak instalacionog procesa:"
 
 #. Type: select
 #. Description
@@ -48,7 +47,7 @@ msgstr "Ovo je glavni meni Debian instalatera."
 #. Description
 #: ../main-menu.templates:14
 msgid "Installation step failed"
-msgstr "Instalacijski korak nije uspio"
+msgstr "Instalacijski korak nije uspjeo"
 
 #. Type: error
 #. Description
@@ -57,7 +56,7 @@ msgid ""
 "An installation step failed. You can try to run the failing item again from "
 "the menu, or skip it and choose something else. The failing step is: ${ITEM}"
 msgstr ""
-"Instalacijski korak nije uspio. Možete pokušati pokrenuti stavku koja nije "
+"Instalacijski korak nije uspjeo. Možete pokušati pokrenuti stavku koja nije "
 "uspjela ponovno sa menija ili ju preskočiti i odabrati neku drugu. "
 "Neuspješna stavka je: ${ITEM}"
 
@@ -65,7 +64,7 @@ msgstr ""
 #. Description
 #: ../main-menu.templates:23
 msgid "Choose an installation step:"
-msgstr "Odaberite instalacijski korak"
+msgstr "Odaberite instalacijski korak:"
 
 #. Type: select
 #. Description
