--- a/debian/po/bs.po
+++ b/debian/po/bs.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: bs\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-19 09:28+0200\n"
-"PO-Revision-Date: 2006-11-06 18:31+0100\n"
+"PO-Revision-Date: 2006-11-12 23:18+0100\n"
 "Last-Translator: Safir Secerovic <sapphire@linux.org.ba>\n"
 "Language-Team: Bosnian <lokal@linux.org.ba>\n"
 "MIME-Version: 1.0\n"
@@ -35,7 +35,7 @@ msgstr "Glavni meni Debian instalatera"
 #. Description
 #: ../main-menu.templates:9
 msgid "Choose the next step in the install process:"
-msgstr "Izaberite slijedeći korak instalacionog procesa:"
+msgstr "Izaberite sljedeći korak instalacionog procesa:"
 
 #. Type: select
 #. Description
