--- a/debian/po/ku.po
+++ b/debian/po/ku.po
@@ -3,25 +3,21 @@
 #
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
-# translation of ku-neu.po to Kurdish
 # Kurdish messages for debian-installer.
 # Copyright (C) 2003 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
 #
-# Erdal Ronahi <erdal.ronahi@gmail.com>, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: ku-neu\n"
+"Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-19 09:28+0200\n"
-"PO-Revision-Date: 2006-10-16 03:50+0100\n"
-"Last-Translator: Erdal Ronahi <erdal.ronahi@gmail.com>\n"
-"Language-Team: Kurdish <ku@li.org>\n"
+"PO-Revision-Date: 2006-11-14 12:00+0000\n"
+"Last-Translator: rizoye-xerzi <rizoxerzi@gmail.com>\n"
+"Language-Team: Kurdish <gnu-ku-wergerandin@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
-"Plural-Forms: nplurals=2; plural= n != 1\n"
 
 #. Type: text
 #. Description
@@ -33,7 +29,7 @@ msgstr "Pêşeka yekemîn a sazkarê Debian"
 #. Description
 #: ../main-menu.templates:9
 msgid "Choose the next step in the install process:"
-msgstr "Gava pêşîn di pêvajoya sazkirinê de hilbijêre:"
+msgstr "Gava piştre ya pêvajoya sazkirinê hilbijêre:"
 
 #. Type: select
 #. Description
@@ -54,8 +50,9 @@ msgid ""
 "An installation step failed. You can try to run the failing item again from "
 "the menu, or skip it and choose something else. The failing step is: ${ITEM}"
 msgstr ""
-"Gaveke sazkirinê bi ser neket. Tu dikarî careke din vê hilbijêrî, an dev jê "
-"berde û tiştekî din hilbijêre. Gava biserneketî ev e: ${ITEM}"
+"Gaveke sazkirinê bi ser neket. Tu dikarî li pêşekê vê gavê dîsa bidî "
+"destpêkirin, an jî tu dikarî guh mediyê û derbasî gaveke din bibî. Gava "
+"biserneketî ev e: ${ITEM}"
 
 #. Type: select
 #. Description
