--- a/debian/po/nn.po
+++ b/debian/po/nn.po
@@ -3,27 +3,26 @@
 #
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
-# translation of nn.po to Norwegian Nynorsk
-# translation of nn.po to Norwegian nynorsk
-# translation of debian-installer.po to Norwegian nynorsk
+# translation of d-i_nn.po to
 # Norwegian Nynorsk messages for debian-installer.
 # Copyright (C) 2003 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
-# Håvard Korsvoll <korsvoll@skulelinux.no>, 2004, 2005, 2006.
 #
+# Håvard Korsvoll <korsvoll@skulelinux.no>, 2004, 2005, 2006.
+# Håvard Korsvoll <korsvoll@gmail.com>, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: nn\n"
+"Project-Id-Version: d-i_nn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-19 09:28+0200\n"
-"PO-Revision-Date: 2006-05-01 23:22+0200\n"
-"Last-Translator: Håvard Korsvoll <korsvoll@skulelinux.no>\n"
-"Language-Team: Norwegian nynorsk <i18n-nn@lister.ping.uio.no>\n"
+"PO-Revision-Date: 2006-11-19 15:58+0100\n"
+"Last-Translator: Håvard Korsvoll <korsvoll@gmail.com>\n"
+"Language-Team:  <i18n-nn@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "nynorsk@lists.debian.org>\n"
-"X-Generator: KBabel 1.10.2\n"
+"X-Generator: KBabel 1.11.2\n"
 "Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
 #. Type: text
@@ -42,7 +41,7 @@ msgstr "Vel neste steg i installasjonen:"
 #. Description
 #: ../main-menu.templates:9
 msgid "This is the main menu for the Debian installer."
-msgstr "Dette er hovudmenyen i Debianinstalleringa."
+msgstr "Dette er hovudmenyen i installeringa av Debian."
 
 #. Type: error
 #. Description
@@ -74,5 +73,5 @@ msgid ""
 "This installation step depends on one or more other steps that have not yet "
 "been performed."
 msgstr ""
-"Dette installasjonssteget krev eitt eller fleire steg som ikkje er utførde "
+"Dette installasjonssteget krev eitt eller fleire steg som ikkje er utførte "
 "enno."
