--- a/debian/po/be.po
+++ b/debian/po/be.po
@@ -12,7 +12,7 @@
 #
 # Andrei Darashenka <adorosh2@it.org.by>, 2005, 2006.
 # Pavel Piatruk <berserker@neolocation.com>, 2006.
-# Nasciona Piatrouskaja <naska1@tut.by>, 2006.
+# Nasciona Piatrouskaja <naska.pet@gmail.com>, 2006.
 # Hleb Rubanau <g.rubanau@gmail.com>, 2006.
 #
 msgid ""
@@ -20,8 +20,8 @@ msgstr ""
 "Project-Id-Version: be\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-19 09:28+0200\n"
-"PO-Revision-Date: 2006-10-17 23:34+0300\n"
-"Last-Translator: Andrei Darashenka <adorosh2@it.org.by>\n"
+"PO-Revision-Date: 2006-12-10 23:34+0300\n"
+"Last-Translator: Pavel Piatruk <berserker@neolocation.com>\n"
 "Language-Team: Belarusian <i18n@mova.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -38,7 +38,7 @@ msgstr "Галоўнае меню праграмы ўсталявання Debian
 #. Description
 #: ../main-menu.templates:9
 msgid "Choose the next step in the install process:"
-msgstr "Ваш наступны крок у працэсе ўсталявання:"
+msgstr "Ваш наступны крок працэса ўсталявання:"
 
 #. Type: select
 #. Description
@@ -76,4 +76,4 @@ msgid ""
 "been performed."
 msgstr ""
 "Гэты крок усталявання залежыць ад аднаго ці больш іншых крокаў, якія не былі "
-"выкананы."
+"пройдзены."
