--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+main-menu (1.17) unstable; urgency=low
+
+  [ Updated translations ]
+  * Arabic (ar.po) by Ossama M. Khayat
+  * Latvian (lv.po) by Aigars Mahinovs
+  * Malayalam (ml.po) by Praveen A
+  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)
+  * Romanian (ro.po) by Eddy Petrișor
+
+ -- Frans Pop <fjp@debian.org>  Wed, 31 Jan 2007 11:46:37 +0100
+
 main-menu (1.16) unstable; urgency=low
 
   * show_main_menu: free menu variable after use. Closes: #405774.
