Post-Etch development merged in from Colin's people directory: - Avoid suppressing menu items that have never been seen before just   because they have a lower menu item number than the last successful item
r45895

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+main-menu (1.19) UNRELEASED; urgency=low
+
+  * Avoid suppressing menu items that have never been seen before just
+    because they have a lower menu item number than the last successful item
+    (closes: #288053).
+
+ -- Colin Watson <cjwatson@debian.org>  Sat, 16 Dec 2006 09:42:13 +0000
+
 main-menu (1.18) unstable; urgency=low
 
   [ Updated translations ]
