multiply all menu-item-numbers by 100
r46255

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,16 @@
 main-menu (1.19) UNRELEASED; urgency=low
 
+  [ Colin Watson ]
   * Avoid suppressing menu items that have never been seen before just
     because they have a lower menu item number than the last successful item
     (closes: #288053).
   * Restore previous default priority when selecting a menu item (other than
     neverdefault items) immediately after backing up to the main menu.
 
- -- Colin Watson <cjwatson@debian.org>  Sat, 16 Dec 2006 09:42:13 +0000
+  [ Joey Hess ]
+  * Increase NEVERDEFAULT to 90000.
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 10 Apr 2007 13:39:11 -0400
 
 main-menu (1.18) unstable; urgency=low
 
